# glazed

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: _container.yml  _helm.yml
Charts/glazed/: values.yaml
src/: clients.rs  main.rs  model.rs
src/model/: node.rs
templates/: 404.html
