[package]
name = "glazed"
# This version is *not* used for the built container image. It is set during the
# CI build process so that the version always matches the latest git tag.
version = "0.0.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["uuid"]}
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "stream"], default-features = false }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
async-graphql-axum = "7.0.17"
url = "2.5.7"
config = "0.15.16"
clap = { version = "4.5.48", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
http-body-util = "0.1.3"
httpmock = "0.8.2"
tower =  "0.5.2"
